# nexus

./: .gitattributes  .gitignore  LICENSE  README.md  package.json  tsconfig.json  tslint.json
src/: app.tsx  index.html  index.ts
src/main/: index.ts
src/native/: CMakeLists.txt  binding.cc  binding.gyp  functions.cc  functions.h  index.ts  mac_helpers.h  mac_helpers.mm  package.json
src/renderer/: app.tsx
typings/: electron-compile.d.ts
